3. Longest Substring Without Repeating Characters

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,11 @@
 	<description>leetcode challenges</description>
 	<packaging>jar</packaging>
 
+
+	<properties>
+		<java.version>17</java.version>
+	</properties>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -18,16 +23,23 @@
 				<configuration>
 					<source>17</source>
 					<target>17</target>
+
+					<!--<annotationProcessorPaths>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>1.18.38</version>
+						</path>
+					</annotationProcessorPaths>
+					-->
+
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.5.0</version> <!-- Use a version compatible with your
-			JUnit
-		version -->
+				<version>3.5.0</version> 
 				<configuration>
-					<!-- Optional: Configure test inclusion/exclusion patterns -->
 					<includes>
 						<include>**/*Test.java</include>
 					</includes>
@@ -40,7 +52,7 @@
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
-			<version>5.11.0</version> <!-- Use the latest stable version -->
+			<version>5.11.0</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -49,6 +61,13 @@
 			<artifactId>junit-jupiter-engine</artifactId>
 			<version>5.11.0</version>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.38</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
