--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
 				</configuration>
 			</plugin>
-			<plugin>
+			<!--<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.5.0</version> 
@@ -45,6 +45,7 @@
 					</includes>
 				</configuration>
 			</plugin>
+			-->
 		</plugins>
 	</build>
 
@@ -53,16 +54,16 @@
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
 			<version>5.11.0</version>
-			<scope>test</scope>
+
 		</dependency>
 
-		<dependency>
+		<!--<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
 			<version>5.11.0</version>
 			<scope>test</scope>
 		</dependency>
-
+-->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
