--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,6 @@
 			<version>5.11.0</version>
 		</dependency>
 
-
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -47,6 +46,12 @@
 			<artifactId>json</artifactId>
 			<version>20250517</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.20.0</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
